# b2b_test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.envs/: db
apps/transaction/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/transaction/migrations/: 0001_initial.py
apps/wallet/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/wallet/migrations/: 0001_initial.py
contrib/: check_conn.py
contrib/dev/: Dockerfile  start.sh
project/: asgi.py  settings.py  urls.py  wsgi.py
utils/: models.py
